# Spark

./: .gitattributes  .gitignore  CMakeLists.txt  Spark.kdev4
dicpp/: COPYING  Jamroot  dicpp.scons  dicpp.scons.build  dicpp.scons.use  shell
dicpp/include/di/: constructor.hpp  injector.hpp  logging.hpp  registry.hpp  registry_decl.hpp  scope.hpp  scoped_provider.hpp  type_provider.hpp  typed_provider.hpp
dicpp/include/di/detail/: generic_provider.hpp  registration_builder.hpp
dicpp/include/di/scopes/: no_scope.hpp  singleton.hpp  thread_local_singleton.hpp
dicpp/include/di/traits/: as_type_key.hpp  basic_type.hpp  constructor.hpp  remove_ptr.hpp  type_meta.hpp
dicpp/lib/: Jamfile
dicpp/lib/example/: PhoneStockQuoteService.hpp  README  StaticStockQuoteService.cpp  StaticStockQuoteService.hpp  StockQuoteApp.cpp  StockQuoteApp.hpp  StockQuoteAppModule.cpp  StockQuoteService.hpp  UserInterface.cpp  UserInterface.hpp  main.cpp
dicpp/lib/src/: demangle.cpp  registry.cpp  type_info.cpp
dicpp/lib/src/scopes/: no_scope.cpp  singleton.cpp  thread_local_singleton.cpp
dicpp/lib/tests/: test_parameters.cpp  test_provider.cpp  test_registry.cpp  test_scopes.cpp  test_thread_local_singleton.cpp
dicpp/lib/tests/traits/: basic_type.cpp
gmock-1.6.0/fused-src/gmock/: gmock.h
spark/: Game.cpp  Game.hpp  GameModule.cpp  GameModule.hpp  main.cpp  stdint.hpp
spark/io/: Dispatcher.cpp  Dispatcher.hpp  IDispatcher.hpp  ITimer.hpp
spark/test/: GoogleTestController.cpp  GoogleTestController.hpp  defaultValues.hpp  googlemock.hpp
spark/test/unit/: Game.cpp  main.cpp
spark/test/unit/io/: Dispatcher.cpp  MDispatcher.hpp  MIDispatcher.hpp  MITimer.hpp
spark/test/unit/video/: GLRenderer.cpp  MIRenderer.hpp
spark/video/: GLRenderer.cpp  GLRenderer.hpp  IRenderer.hpp
tools/: CodeWizard.py  glextensions  glgen.py  gllicense  glversions
unix/spark/: main.cpp
unix/spark/io/: Timer.cpp  Timer.hpp
unix/spark/system/: time.cpp  time.hpp
unix/spark/test/unit/io/: Timer.cpp
unix/spark/test/unit/mock/: system.hpp
unix/spark/test/unit/mock/system/: time.cpp
win32/spark/: main.cpp
win32/spark/io/: Timer.cpp  Timer.hpp
win32/spark/system/: windows.cpp  windows.hpp
win32/spark/test/unit/io/: Timer.cpp
win32/spark/test/unit/mock/: system.cpp  system.hpp
win32/spark/test/unit/mock/system/: windows.cpp
